# yara-ocaml

./: jbuild  yara.ml  yara.opam
