opam-version: "1.2"
name: "yara"
version: "0.1"
maintainer: "Anton Kochkov <anton.kochkov@gmail.com>"
author: "Anton Kochkov <anton.kochkov@gmail.com>"
homepage: "https://github.com/XVilka/yara-ocaml"
bug-reports: "https://github.com/XVilka/yara-ocaml/issues"
license: "MIT"
dev-repo: "https://github.com/XVilka/yara-ocaml.git"
build: [
	["jbuilder" "subst" "-n" name] {pinned}
	["jbuilder" "build" "-p" name "-j" jobs]
]
depends: [
	"jbuilder" {build}
	"ctypes"
]
available: [ocaml-version >= "4.02.3"]
